# devsoc-intras-2026

./: .gitignore  README.md  langchain-agent.ipynb  server.py
submissions/Team 5/: ReadMe.md
submissions/team3/Team_3/: .env.example  .gitignore  README.md  app.py  bot.py  fetch_content.py  ingest_modal.py  main.py  requirements.txt  run.bat  run.py
submissions/team3/Team_3/ARCHITECTURE/: ARCHITECTURE.md
submissions/team3/Team_3/FRONT_END/: README.md
submissions/team3/Team_3/families/: metakgp_family.py
submissions/team3/Team_3/static/: index.html  index_old.html  script.js  script_old.js  styles.css  (+1 more)
submissions/team_2/: .env.example  .gitignore
submissions/team_2/chatbot/backend/: .env.example  .gitignore  README.md  pyproject.toml  start.sh  stop.sh
submissions/team_2/chatbot/backend/scripts/: deploy_modal_llama.sh
submissions/team_2/chatbot/backend/src/app/: __init__.py  main.py
submissions/team_2/chatbot/backend/src/services/: __init__.py
submissions/team_2/chatbot/backend/src/services/chat_agent/: engine.py  experts.py  router.py
submissions/team_2/chatbot/backend/src/services/indexing/: __init__.py  indexer.py
submissions/team_2/chatbot/backend/src/services/query_service/: __init__.py  router.py  service.py
submissions/team_2/chatbot/backend/src/utils/: __init__.py  chroma_client.py  chunk_processor.py  embedding_client.py  gemini_client.py  got_utils.py  groq_client.py  modal_embeddings.py
submissions/team_2/scraper/: .gitignore  README.md  requirements.txt
submissions/team_2/scrapper/: .gitignore  README.md  requirements.txt
(+14 files in other folders)
